fix: perbaikan koneksi database
